--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
+         </activity>
+        <activity
+            android:name=".NavActivity"
+            android:label="@string/title_activity_nav" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
