--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cricket.material.cricket" >
+    package="com.cricket.material.cricket">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -8,14 +8,13 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
-         </activity>
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".NavActivity"
-            android:label="@string/title_activity_nav" >
+            android:label="@string/title_activity_nav">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,9 +23,10 @@
         </activity>
         <activity
             android:name=".WebViewActivity"
-            android:label="@string/news_title">
-        </activity>
-
+            android:label="@string/news_title"></activity>
+        <activity
+            android:name=".SeriesActivity"
+            android:label="@string/title_activity_series"></activity>
     </application>
 
 </manifest>
