Add Back functionality to WebView to return back to News Fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         </activity>
         <activity
             android:name=".WebViewActivity"
-            android:label="@string/news_title" />
+            android:label="@string/news_title"
+            android:parentActivityName=".NavActivity"/>
         <activity
             android:name=".SeriesActivity"
             android:label="@string/title_activity_series" />
