--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,30 @@
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
+# built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Eclipse
+.metadata
+
 .DS_Store
-/build
-/captures
+
+# Idea
+.gradle/
+*.iml
+.idea/
+
+# Gradle
+build/
+app/build
